--- a/src/src/styles/checkout.css
+++ b/src/src/styles/checkout.css
@@ -59,6 +59,7 @@
     background-color: #FEFAE0;
     border-radius: 20px;
     padding: 0.5rem 4rem;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
