--- a/src/src/styles/cart.css
+++ b/src/src/styles/cart.css
@@ -87,6 +87,7 @@
     border-radius: 5px;
     text-decoration: underline;
     padding: 1rem 2rem;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
