--- a/src/src/styles/index.css
+++ b/src/src/styles/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+p {
+  margin-block-start: 1rem;
+  margin-block-end: 1rem;
+}
+
+button{
+  cursor: pointer;
+}
+
+h1,h2,h3,h4,h5 {
+  margin-block-start: 1rem;
+  margin-block-end: 1rem;
+}
