--- a/src/src/styles/register.css
+++ b/src/src/styles/register.css
@@ -1,129 +1,106 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-body{
-    font-family:'Inter', sans-serif;
-}
-.regis_container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    color: #606C38;
-}
-
-.brand_logo{
-    background-image: url('../images/background-1.png');
+.register-logo {
+    background: url('../images/background-1.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 45%;
+    display: flex;
     height: 100vh;
-    flex-direction: colomn;
-    display: flex;
-    border-bottom: 3px solid #263618;
-    box-sizing: border-box;
-} 
-
-.brand_logo img{
-    margin: auto;
-}
-.main{
-    background-color: #FEFAE0;
-    width: 60%;
-    height: 100vh;
-    display:flex;
     flex-direction: column;
-    border-bottom: 3px solid #263618;
-    box-sizing: border-box;
-    place-content: center;
-}
-
-.form_input{
-    margin: auto;
-    height: 500px;
-    width : 400px;
-    border: 2px solid #606C38;
-    border-radius: 30px;
-    border-color: #606C38 ;
-    padding: 20px;
-    box-sizing: border-box;
+  }
+  
+  .register-logo a {
+    font-size: 60px;
+    margin-left: 2rem;
+    width: 4rem;
+  }
+  
+  .register-logo img {
+    margin: auto auto;
+    margin-bottom: 40%;
+  }
+  
+  .register {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      color: #606C38;
+    }
+    .register_field h1 {
+      font-size: 48px;
+      color: #000;
+      font-weight: 300;
+      text-decoration: underline 3px;
+      margin-block-start: 1rem;
+      margin-block-end: 0;
+    }
+    .register__container {
+      width: 60%;
+      height: 100vh;
+      background-color: #FEFAE0;
+      display: flex;
+    }
+    .register_field {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      width: 80%;
+      justify-content: center;
+      margin: auto;
+      border: 1px solid #606C38;
+      border-radius: 65px;
+    }
+    .register_input {
+      width: 80%;
+      display: flex;
+      flex-direction: column;
+      margin: 0 auto;
+    }
+    .register_input label {
+      text-align: left;
+      color: gray;
+    }
+    .register__textBox {
+      background-color: #FEFAE0;
+      padding: 5px;
+      font-size: 18px;
+      margin-bottom: 10px;
+      border-radius: 9px;
+      width: 95%;
+    }
+    .register__btn {
+      padding: 10px;
+      font-size: 18px;
+      border: none;
+      color: white;
+      background-color: #606C38;
+      width: 10rem;
+      border-radius: 30px;
+    }
+  
+    .button-container-login {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 1rem 0;
+    }
+  
+      @media screen and (max-width: 768px) {
+        .register-logo{
+          width: 100%;
+        }
     
-}
-
-.form_input h1{
-    text-align: center;
-    text-decoration: underline;
-    font-size: 50px;
-}
-
-.form_input .user_input{
-    width: 80%;
-    margin: auto;
-    display: flex;
-    font-size: 14px;
-    flex-direction: column;
-    
-}
-
-
-.form_input form input{
-    margin-top: -15px;
-    padding: 9px;
-    box-sizing: border-box;
-    border: 2px solid #606C38;
-    border-radius: 4px;
-    background-color: #FEFAE0;
-}
-
-.form_input form button {
-    background-color: #606C38;
-    border: none;
-    border-radius: 11px;
-    color: #FEFAE0;
-    padding: 15px 32px;
-    box-sizing: border-box;
-    margin: 4px 2px;
-    cursor: pointer;
-
-}
-
-.regis_btn{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 5px;
-}
-
-.regis_btn button{
-    text-decoration: underline;
-    font-size: 14px;
-    letter-spacing: 1px;
-}
-
-/* form.regis_btn a{
-    display:inline-block;
-} */
-
-.form_input form p{
-    margin-top: 3px;
-    margin-left: -10px;
-    font-size: 9.5px;
-    word-spacing: -0.5px;
-    text-align : center;
-
-}
-
-.footer{
-    background-color: #263618;
-    text-align: center;
-    place-content: center;
-    color: #FEFAE0;
-    border-top: 1px solid #FEFAE0;
-    box-sizing: border-box;
-}
-
-.footer p3{
-    color: #606C38;
-    font-size: 14px;
-}
+        .register-logo img{
+          width: 80%;
+          margin-top: auto;
+        }
+        .register__container {
+          width: 100%;
+          height: 100%;
+          padding: 3rem 0;
+        }
+        .register {
+          flex-direction: column;
+          width: 100%;
+        }
+      }
