--- a/src/src/styles/index.css
+++ b/src/src/styles/index.css
@@ -25,3 +25,18 @@ h1,h2,h3,h4,h5 {
   margin-block-start: 1rem;
   margin-block-end: 1rem;
 }
+
+.whatsapp {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+}
+
+.whatsapp img {
+  opacity: 80%;
+  border-radius: 100%;
+}
+
+.whatsapp img:hover {
+  opacity: 100%;
+}
